@@ -1,3 +1,15 @@
+2003-05-25  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
+
+	* dccsend.c: use more code from libdcc.
+
+	* lib/Makefile.am: rename to libdcc.
+	* Makefile.am: adapt to rename.
+
+	* child.c: replace parse_get_line with new parse_reply from
+	libdcc.
+	* lib/dcc.c: add parse_reply.
+	* lib/dcc.h: add parse_reply.
+
 2003-05-22  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
 
 	* child.c (get_line_from_client): move from here...
